--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "localizr": "^0.1.6",
     "react": "^0.13.3",
     "react-engine": "^1.7.0",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "react-intl": "^1.2.0",
+    "js-yaml": "^3.2.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
